--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -15,10 +15,7 @@
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Manage Your Tasks</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload Data</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/search" routerLinkActive="active">Search Archived Data</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/viewer" routerLinkActive="active">View Data</a></li>
-<!--             <li role="menuitem"><a class="dropdown-item" routerLink="/" routerLinkActive="active">Help</a></li> -->
-            <li *ngIf="admin" role="menuitem"><a class="dropdown-item" routerLink="/projects" routerLinkActive="active">Manage Projects</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/viewer" routerLinkActive="active">Site Viewer</a></li>
             <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
           </ul>
         </li>
