--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -1,7 +1,7 @@
 <!-- HEADER AND NAVBAR -->
 <header>
   <nav class="navbar navbar-default">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{context}}/prism/home#/menu" title="Home"><img [src]="context + '/logo/view?id=logo'" /></a>
         <p class="navbar-brand" style="margin: 0;" >{{title}}</p>
@@ -10,7 +10,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li dropdown>
           <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-            Menu<span class="caret"></span>
+            <span class="glyphicon glyphicon-menu-hamburger"></span> 
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Manage Your Tasks</a></li>
