--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -1,68 +1,81 @@
 <uasdm-header [title]="'Site Viewer'"></uasdm-header>
 
-<div id="app-container" class="container">
+<div id="app-container" class="container-fluid">
+
   <div class="row">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-6">
-      <div class="input-group" style="width: 100%;">
-        <input class="form-control" type="text" placeholder="Search..." (keyup)="searchTerm$.next($event.target.value)">
+    <div class="col-md-3 lw-inner-col" id="location-explorer-list">
+      <div *ngIf="admin" class="row-fluid">
+        <button (click)="handleCreate()" class="btn btn-primary">Create new site</button>
+      </div>    
+      <div class="row-fluid">
+        <div class="location-management-widget-section">
+          <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" />
+        </div>
+        <div>
+          <div class="list-group" *ngIf="results">
+            <div class="list-group-item" *ngFor="let result of results">
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="list-group" *ngIf="results">
-        <div class="list-group-item" *ngFor="let result of results">
-          <span *ngIf="result.filename == null">
-            <i class="fa fa-folder-open"></i>
-          </span>
-          <span *ngIf="result.filename != null">
-            <i class="fa fa-file"></i>
-          </span>
-
-          <a (click)="handleClick($event, result)"> {{ result.filename || result.hierarchy[result.hierarchy.length -1].label}} </a>
-
-          <div class="pull-right">
-            <span *ngFor="let site of result.hierarchy; index as i">
-              {{site.label}}
-              <span *ngIf="i < (result.hierarchy.length -1)"> / </span>
-            </span>
+      <div class="row-fluid">
+        <div class="location-management-widget-section location-management-list-container">
+          <div *ngIf="nodes.length > 0" class="tree">
+            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()"> <ng-template #treeNodeTemplate let-node let-index="index"> <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i> </ng-template> </tree-root>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-3"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <div *ngIf="admin" class="row">
-        <button (click)="handleCreate()" class="btn btn-primary">Create new site</button>
-        <hr>
-      </div>
+    <div class="col-md-9" id="location-explorer-map">
       <div class="row">
-        <div *ngIf="nodes.length > 0" class="tree">
-          <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()"> <ng-template #treeNodeTemplate let-node let-index="index"> <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i> </ng-template> </tree-root>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-        <div id='menu'>
+        <aside class="base-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
           <span *ngFor="let baseLayer of baseLayers">
-            <input type='radio' name='rtoggle' [value]='baseLayer.id' (change)="handleStyle(baseLayer)">
+            <input type='radio' name='rtoggle' [value]='baseLayer.id' [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
             <label>{{baseLayer.label}}</label>
           </span>
-        </div>
-      </div>
-      <div class="row">
-        <div id="map" style="height: 500px; width: 900px;"></div>
+        </aside>
+        <div id="map" class="map-view-port"></div>
       </div>
     </div>
   </div>
 </div>
 
-<context-menu #nodeMenu> <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> Edit {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> Delete {{item?.data.name}} </ng-template> </context-menu>
+<ng-template #bsItemTemplate let-match="match" let-query="query">
+  <span *ngIf="match.item.filename == null">
+    <i class="fa fa-folder-open"></i>
+  </span>
+  <span *ngIf="match.item.filename != null">
+    <i class="fa fa-file"></i>
+  </span>
+  
+  {{ match.item.filename || match.item.hierarchy[match.item.hierarchy.length -1].label}}
 
-<context-menu #siteMenu> <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> Edit {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleEditGeom($event.item)"> Edit geometry for {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> Delete {{item?.data.name}} </ng-template> </context-menu>
+  <div class="pull-right">
+    <span *ngFor="let site of match.item.hierarchy; index as i">
+      {{site.label}}
+      <span *ngIf="i < (match.item.hierarchy.length -1)"> / </span>
+    </span>
+  </div>
+</ng-template>
 
-<context-menu #leafMenu> <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> Edit {{item?.data.name}} </ng-template> <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> Delete {{item?.data.name}} </ng-template> </context-menu>
-
-<context-menu #objectMenu> <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> Download {{item?.data.name}} </ng-template> </context-menu>
+<context-menu #nodeMenu>
+   <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem divider="true"></ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i> Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template>
+</context-menu>
+<context-menu #siteMenu>
+   <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleEditGeom($event.item)"> <i class="fa fa-globe" aria-hidden="true"></i> Edit geometry for {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem divider="true"></ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i> Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template>
+</context-menu>
+<context-menu #leafMenu>
+   <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit {{item?.data.name}} </ng-template>
+   <ng-template contextMenuItem divider="true"></ng-template>
+   <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template>
+</context-menu>
+<context-menu #objectMenu>
+   <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}} </ng-template>
+</context-menu>
