--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -76,6 +76,9 @@
    <ng-template contextMenuItem divider="true"></ng-template>
    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i> Delete {{item?.data.name}} </ng-template>
 </context-menu>
+<context-menu #workerNodeMenu>
+   <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i> Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
+</context-menu>
 <context-menu #objectMenu>
    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}} </ng-template>
 </context-menu>
