--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -4,24 +4,22 @@
 
   <div class="row">
     <div class="col-md-3 lw-inner-col" id="location-explorer-list">
-      <div *ngIf="admin" class="row-fluid">
-        <button (click)="handleCreate()" class="btn btn-primary">Create new site</button>
-      </div>    
       <div class="row-fluid">
         <div class="location-management-widget-section">
           <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"  [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" />
         </div>
-        <div>
-          <div class="list-group" *ngIf="results">
-            <div class="list-group-item" *ngFor="let result of results">
-            </div>
-          </div>
-        </div>
       </div>
+      <div *ngIf="admin" class="row-fluid">
+        <button (click)="handleCreate()" class="btn btn-primary">Create new site</button>
+      </div>    
       <div class="row-fluid">
         <div class="location-management-widget-section location-management-list-container">
           <div *ngIf="nodes.length > 0" class="tree">
-            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()"> <ng-template #treeNodeTemplate let-node let-index="index"> <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i> </ng-template> </tree-root>
+            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
+              <ng-template #treeNodeTemplate let-node let-index="index">
+                <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i>
+              </ng-template>
+            </tree-root>
           </div>
         </div>
       </div>
@@ -50,12 +48,12 @@
   
   {{ match.item.label}}
 
-  <span class="pull-right">
+  <div class="pull-right">
     <span *ngFor="let site of match.item.hierarchy; index as i">
       {{site.label}}
       <span *ngIf="i < (match.item.hierarchy.length -1)"> / </span>
     </span>
-  </span>
+  </div>
 </ng-template>
 
 <context-menu #nodeMenu>
