--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -1,17 +1,17 @@
 <!-- HEADER AND NAVBAR -->
 <header>
   <nav class="navbar navbar-default">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{context}}/prism/home#/menu" title="Home"><img [src]="context + '/logo/view?id=logo'" /></a>
-        <p class="navbar-brand" style="margin: 0;" >{{title}}</p>
+        <!-- <p class="navbar-brand" style="margin: 0;" >{{title}}</p> -->
       </div>
           
       <ul class="nav navbar-nav navbar-right">
         <li dropdown>
-          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-            Menu<span class="caret"></span>
-          </a>    
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle> 
+             <span class="glyphicon glyphicon-menu-hamburger"></span> 
+          </a>      
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Manage Your Tasks</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload Data</a></li>
@@ -24,7 +24,7 @@
         </li>
       </ul>
       
-      <div class="navbar-right">
+      <div class="navbar-right user-indicator">
         <p class="navbar-text">Logged in as <b style="color:white;">{{userName}}</b></p>
       </div>
       
