--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -107,6 +107,12 @@ tree-node-expander{
   float: right;
 }
 
+button.create-site-btn {
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+}
+
 .error-modal{
     color: #a16969;
     font-size: 20px;
