--- a/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
+++ b/uasdm-web/src/main/webapp/net/geoprism/css/theme.css
@@ -30,7 +30,7 @@
  --theme-button-black: #767676;
 
  --theme-cancel-button-color: grey;
- --theme-cancel-button-color-hover: #6BA53A;
+ --theme-cancel-button-color-hover: #007276;
 
  --theme-submit-button-color: #007276;
  --theme-submit-button-color-hover: #00adb3;
