--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -4,19 +4,21 @@
 
   <div class="row">
     <div class="col-md-3 lw-inner-col" id="location-explorer-list">
-      <div class="row-fluid">
+      <div class="row">
         <div class="location-management-widget-section">
           <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"  [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label" />
         </div>
       </div>
-      <div *ngIf="admin" class="row-fluid">
+      <!-- <div *ngIf="admin" class="row">
         <button (click)="handleCreate()" class="btn btn-primary create-site-btn">Create new site</button>
-      </div>   
+      </div>    -->
       
       <!-- <hr> -->
 
-      <div class="row-fluid">
+      <div class="row">
         <div class="location-management-widget-section location-management-list-container">
+                    <button (click)="handleCreate()" class="btn btn-primary create-site-btn">Create new site</button>
+
           <div *ngIf="nodes.length > 0" class="tree">
             <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
               <ng-template #treeNodeTemplate let-node let-index="index">
