--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -66,35 +66,18 @@
 </ng-template>
 
 <context-menu #nodeMenu>
-    <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit
-        {{item?.data.name}} </ng-template>
+    <ng-template contextMenuItem let-item [visible]="canEdit" (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit
+        {{item?.data.name}} 
+    </ng-template>
+    <ng-template contextMenuItem let-item [visible]="isSite" (execute)="handleEditGeom($event.item)"> <i class="fa fa-globe" aria-hidden="true"></i>
+        Edit geometry for {{item?.data.name}} 
+    </ng-template>
     <ng-template contextMenuItem divider="true"></ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i>
+    <ng-template contextMenuItem let-item [visible]="canAddChild" (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i>
         Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i>
-        Delete {{item?.data.name}} </ng-template>
-</context-menu>
-<context-menu #siteMenu>
-    <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit
-        {{item?.data.name}} </ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleEditGeom($event.item)"> <i class="fa fa-globe" aria-hidden="true"></i>
-        Edit geometry for {{item?.data.name}} </ng-template>
-    <ng-template contextMenuItem divider="true"></ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i>
-        Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i>
-        Delete {{item?.data.name}} </ng-template>
-</context-menu>
-<context-menu #leafMenu>
-    <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)"> <i class="fa fa-edit"></i> Edit
-        {{item?.data.name}} </ng-template>
-    <ng-template contextMenuItem divider="true"></ng-template>
-    <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i>
-        Delete {{item?.data.name}} </ng-template>
-</context-menu>
-<context-menu #workerNodeMenu>
-    <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)"> <i class="fa fa-arrow-circle-down"></i>
-        Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}} </ng-template>
+    <ng-template contextMenuItem let-item [visible]="canDelete" (execute)="handleDelete($event.item)"> <i class="fa fa-trash" aria-hidden="true"></i>
+        Delete {{item?.data.name}} 
+    </ng-template>
 </context-menu>
 <context-menu #objectMenu>
     <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> <i class="fa fa-download"
