--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -2,67 +2,62 @@
 
 <div id="app-container" class="container-fluid">
 
-    <div class="row">
-        <div class="col-md-3 lw-inner-col" id="location-explorer-list">
-            <form class="submit-form">
-                <div class="row">
-                    <div class="location-management-widget-section">
+  <div class="row">
+    <div class="col-md-3 lw-inner-col" id="location-explorer-list">
+      <form class="submit-form">
+        <div class="row">
+          <div class="location-management-widget-section">
                         <input class="form-control" type="text" placeholder="Search..." [(ngModel)]="search"
                             [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)"
                             [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
                             [ngModelOptions]="{standalone: true}" />
-                    </div>
-                </div>
-                <div *ngIf="admin" class="row">
-                    <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new site</button>
-                </div>
-            </form>
-
-            <!-- <hr> -->
-
-            <div class="row">
-                <div class="location-management-widget-section location-management-list-container">
-                    <div *ngIf="nodes.length > 0" class="tree">
-                        <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
-                            <ng-template #treeNodeTemplate let-node let-index="index">
-                                <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i>
-                            </ng-template>
-                        </tree-root>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <div class="col-md-9" id="site-explorer-map">
-            <div class="row">
-                <aside class="base-layer-panel mapboxgl-ctrl mapboxgl-ctrl-group">
-                    <span *ngFor="let baseLayer of baseLayers">
-                        <input type='radio' name='rtoggle' [value]='baseLayer.id' [checked]="baseLayer.selected"
-                            (change)="handleStyle(baseLayer)">
-                        <label>{{baseLayer.label}}</label>
-                    </span>
-                </aside>
-                <div id="map" class="map-view-port"></div>
-            </div>
+        <div *ngIf="admin" class="row">
+          <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Create new site</button>
         </div>
+      </form>
+
+      <!-- <hr> -->
+
+      <div class="row">
+        <div class="location-management-widget-section location-management-list-container">
+          <div *ngIf="nodes.length > 0" class="tree">
+            <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()"> <ng-template #treeNodeTemplate let-node let-index="index"> <span>{{ node.data.name }}</span> <i class="fa fa-folder" *ngIf="!isData(node)"></i> </ng-template> </tree-root>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="col-md-9" id="site-explorer-map">
+      <div class="row">
+        <article class="base-layer-panel">
+          <accordion>
+            <accordion-group heading="Base Layer">
+              <div class="row-form" *ngFor="let baseLayer of baseLayers">
+                <input type='radio' name='rtoggle' [value]='baseLayer.id' [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
+                <label>{{baseLayer.label}}</label>
+              </div>        
+            </accordion-group>
+          </accordion>        
+        </article>
+        <div id="map" class="map-view-port"></div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<ng-template #bsItemTemplate let-match="match" let-query="query">
-    <span *ngIf="match.item.filename == null">
-        <i class="fa fa-folder-open"></i>
-    </span>
-    <span *ngIf="match.item.filename != null">
-        <i class="fa fa-file"></i>
-    </span>
+<ng-template #bsItemTemplate let-match="match" let-query="query"> <span *ngIf="match.item.filename == null">
+  <i class="fa fa-folder-open"></i>
+</span> <span *ngIf="match.item.filename != null">
+  <i class="fa fa-file"></i>
+</span> {{ match.item.label}}
 
-    {{ match.item.label}}
-
-    <div class="pull-right">
-        <span *ngFor="let site of match.item.hierarchy; index as i">
-            {{site.label}}
-            <span *ngIf="i < (match.item.hierarchy.length -1)"> / </span>
-        </span>
-    </div>
+<div class="pull-right">
+  <span *ngFor="let site of match.item.hierarchy; index as i">
+    {{site.label}}
+    <span *ngIf="i < (match.item.hierarchy.length -1)"> / </span>
+  </span>
+</div>
 </ng-template>
 
 <context-menu #nodeMenu>
