--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -77,6 +77,7 @@
     </ng-template>
 </context-menu>
 <context-menu #objectMenu>
-    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> <i class="fa fa-download"
-            aria-hidden="true"></i> Download {{item?.data.name}} </ng-template>
+    <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)"> 
+      <i class="fa fa-download" aria-hidden="true"></i> Download {{item?.data.name}}
+    </ng-template>
 </context-menu>
